--- a/accounts.html
+++ b/accounts.html
@@ -10,18 +10,20 @@
 		crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css" />
 	<ul class="nav nav-tabs">
-		<ul class="nav nav-tabs">
-			
-			<li class="nav-item">
-				<a class="nav-link active" aria-current="page" href="index.html">Home</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" aria-current="page" href="wordle.html">Play Wordle</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="leader.html">LeaderBoard</a>
-			</li>
-
-		</ul>
+		<li class="nav-item">
+			<a class="nav-link active"  href="index.html">Home</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="wordle.html">Play Wordle</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="leader.html">LeaderBoard</a>
+		</li>
+	
+		<li class="nav-item">
+			<a class="nav-link" aria-current="page" href="accounts.html">Account</a>
+		</li>
+	
+	</ul>
 
 </head>
