--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 	
 	<ul class="nav nav-tabs">
 		<li class="nav-item">
-			<a class="nav-link" aria-current="page" href="wordle.html">Play Wordle</a>
+			<a class="nav-link active" aria-current="page" href="index.html">Home</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" aria-current="page" href="leader.html">LeaderBoard</a>
+			<a class="nav-link"  href="wordle.html">Play Wordle</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link"  href="leader.html">LeaderBoard</a>
 		</li>
 		
 		<li class="nav-item">
