--- a/wordle.html
+++ b/wordle.html
@@ -10,16 +10,19 @@
 	
 	<ul class="nav nav-tabs">
 		<li class="nav-item">
+			<a class="nav-link active"  href="index.html">Home</a>
+		</li>
+		<li class="nav-item">
 			<a class="nav-link" aria-current="page" href="wordle.html">Play Wordle</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" aria-current="page" href="leader.html">LeaderBoard</a>
+			<a class="nav-link" href="leader.html">LeaderBoard</a>
 		</li>
-		
+	
 		<li class="nav-item">
 			<a class="nav-link" href="accounts.html">Account</a>
 		</li>
-		
+	
 	</ul>
 </head>
 <body>
