--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 		</li>
 		
 	</ul>
+	<form action="/logout?_method=DELETE" method="POST">
+		<button type="submit">Log Out</button>
+	</form>
 </head>
 <body>
 <div class="game-container">
