--- a/login.html
+++ b/login.html
@@ -4,14 +4,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Leader Board</title>
+	<title>Login</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
 		crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css" />
 	<ul class="nav nav-tabs">
 		<li class="nav-item">
-			<a class="nav-link active"  href="index.html">Home</a>
+			<a class="nav-link active" href="index.html">Home</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" href="wordle.html">Play Wordle</a>
@@ -19,16 +19,46 @@
 		<li class="nav-item">
 			<a class="nav-link" aria-current="page" href="leader.html">LeaderBoard</a>
 		</li>
-	
+
 		<li class="nav-item">
 			<a class="nav-link" href="accounts.html">Account</a>
 		</li>
-	
+
 	</ul>
-		
+
 </head>
 
 <body>
+<h1>Login</h1>
+<div class="container">
+	<div class="row row-cols-4">
+		<div class="col"></div>
+		<div class="col"></div>
+		<div class="col"></div>
+	</div>
+</div>
+<div class="container">
+	<div class="row row-cols-4">
+		<div class="col"></div>
+		<div class="col">
+			<form action="/login" method="POST" class="form">
+	
+			<div class="form-input">
+				<label for="email">Email</label>
+				<input type="email" id="email" name="email" required>
+			</div>
+			<div class="form-input">
+				<label for="password">Password</label>
+				<input type="password" id="password" name="password" minlength="8" required>
+			</div>
+			<button type="submit" value="Login">Login</button>
+			</form>
+			<a href="/register">Register</a>
+		</div>
+		<div class="col"></div>
+	</div>
+</div>
+
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
