--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 		<li class="nav-item">
 			<a class="nav-link" href="accounts.html">Account</a>
 		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="login">Login</a>
+		</li>
 		
 	</ul>
 	<form action="/logout?_method=DELETE" method="POST">
