--- a/register.html
+++ b/register.html
@@ -23,6 +23,9 @@
 		<li class="nav-item">
 			<a class="nav-link" href="accounts.html">Account</a>
 		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="login">Login</a>
+		</li>
 
 	</ul>
 
